--- a/sass/main.scss
+++ b/sass/main.scss
@@ -64,7 +64,7 @@
             }
             .menu-wrap{
                 @include MD{
-                    display: none;
+                    //display: none;
                 }
                 .write{
                     font-size: 2em;
