--- a/sass/main.scss
+++ b/sass/main.scss
@@ -151,16 +151,16 @@
     right: 2%;
     z-index: 2;
     @include fx($v: $CT);
-    
     i{
         font-size: 2em;
         margin-left: 0.125em;
     }
     .search-info-wrap{
-        border-radius: 0.5em;
         input{
             border-radius: 0.5em;
             padding-left: 0.5em;
+            border: none;
+            box-shadow: 1px 1px 1px 1px black;
         }
     }
 }
@@ -168,8 +168,8 @@
 .popup-wrap{
     @include center(150);
     border: solid 1px black;
-    width: 80vw;
-    height: 80vh;
+    width: 95vw;
+    height: 95vh;
     background-color: white;
     display: none;
     .write-popup{
