--- a/css/main.css
+++ b/css/main.css
@@ -275,7 +275,8 @@ a:link, a:visited, a:hover, a:active {
   left: 50%;
   transform: translate(-50%, -50%);
   border: solid 1px black;
-  width: 95vw;
+  margin-top: 10vw;
+  width: 90vw;
   background-color: white;
   display: none;
 }
