--- a/css/main.css
+++ b/css/main.css
@@ -230,8 +230,22 @@ a:link, a:visited, a:hover, a:active {
   margin-bottom: 2%;
 }
 
+.wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
+  font-size: 1.125em;
+  text-align: center;
+}
+
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
-  height: 140px;
+  height: 144px;
+}
+
+.wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .title {
+  font-weight: bold;
+  margin: 5px 0;
+}
+
+.wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .info div {
+  padding: 0.125em 0;
 }
 
 @media screen and (max-width: 1200px) {
@@ -240,7 +254,7 @@ a:link, a:visited, a:hover, a:active {
     height: 280px;
   }
   .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
-    height: 170px;
+    height: 168px;
   }
 }
 
@@ -249,8 +263,8 @@ a:link, a:visited, a:hover, a:active {
     width: 31%;
     height: 320px;
   }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap .img {
-    height: 190px;
+  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
+    height: 192px;
   }
 }
 
@@ -259,8 +273,8 @@ a:link, a:visited, a:hover, a:active {
     width: 48%;
     height: 360px;
   }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap .img {
-    height: 220px;
+  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
+    height: 216px;
   }
 }
 
@@ -269,7 +283,7 @@ a:link, a:visited, a:hover, a:active {
     width: 98%;
     height: 400px;
   }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap .img {
+  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
     height: 240px;
   }
 }
