--- a/sass/main.scss
+++ b/sass/main.scss
@@ -305,7 +305,25 @@
         }
     }
     .view-popup{
-        height: 90vh;
+        padding: 0.5em;
+        div:not(.button-wrap){
+            margin: 1em 0;
+            display: block;
+            border-bottom: 1px solid black;
+            padding: 1em 0;
+            @include fx;
+            span{
+                font-size: 1.25em;
+                padding-right: 0.625em;
+                font-weight: bold;
+                &::after{
+                    content: " /";
+                }
+            }
+            p{
+                font-size: 1.25em;
+            }
+        }
         display: none;
     }
 
@@ -317,5 +335,5 @@
             margin: 0 0.25em;
             cursor: pointer;
         }
-    }
+    }  
 }
