--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,12 @@ a:link, a:visited, a:hover, a:active {
   display: none;
 }
 
+@media screen and (max-width: 576px) {
+  .popup-wrap {
+    margin-top: 5vh;
+  }
+}
+
 .popup-wrap .write-popup {
   display: none;
 }
