--- a/sass/main.scss
+++ b/sass/main.scss
@@ -238,7 +238,7 @@
     background-color: white;
     display: none;
     @include XS{
-        // margin-top: 5vh;
+        margin-top: 5vh;
     }
     .write-popup{
         display: none;
