--- a/css/main.css
+++ b/css/main.css
@@ -343,9 +343,15 @@ a:link, a:visited, a:hover, a:active {
   display: none;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-height: 768px) {
   .popup-wrap {
-    margin-top: 5vh;
+    margin-top: 10vh;
+  }
+}
+
+@media screen and (max-height: 576px) {
+  .popup-wrap {
+    margin-top: 20vh;
   }
 }
 
